# fingerprint_feature_extractor

./: .gitignore  README.md  enroll_subset.py  enrollment.py  eval_pipline.py  eval_subset.py  evaluate_altered_with_charts.py  feature_extractor.py  matcher.py  pyproject.toml  search.py
notebook/: Fingerprint Feature Extraction.ipynb  starter-sokoto-coventry-fingerprint-de5cf118-2.ipynb
